Fixed test failures from mach5 (iteration 1)